[gd_scene load_steps=7 format=2]

[ext_resource path="res://imagens/Plano de fundo, doação (F).png" type="Texture" id=1]
[ext_resource path="res://imagens/Bancada.png" type="Texture" id=2]
[ext_resource path="res://imagens/Prancheta.png" type="Texture" id=3]
[ext_resource path="res://imagens/Botão jogo.png" type="Texture" id=4]
[ext_resource path="res://tipos sanguineos/Errado.gd" type="Script" id=5]
[ext_resource path="res://tipos sanguineos/Correct.gd" type="Script" id=6]

[node name="AB+" type="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Plano de fundo, doação (F)2" type="Sprite" parent="."]
position = Vector2( 684.365, 385.161 )
scale = Vector2( 0.355222, 0.356895 )
texture = ExtResource( 1 )

[node name="Bancada2" type="Sprite" parent="Plano de fundo, doação (F)2"]
position = Vector2( -0.0458984, -2.39661 )
scale = Vector2( 1.00033, 0.994879 )
texture = ExtResource( 2 )

[node name="Prancheta" type="Sprite" parent="Plano de fundo, doação (F)2/Bancada2"]
position = Vector2( -27.3781, 10.5883 )
scale = Vector2( 1.30118, 1.01928 )
texture = ExtResource( 3 )

[node name="Nome" type="RichTextLabel" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
modulate = Color( 0.156863, 0.137255, 0.239216, 1 )
margin_left = -593.034
margin_top = -526.248
margin_right = -442.034
margin_bottom = -511.248
rect_scale = Vector2( 6.7518, 8.06638 )
text = "Nome: Carolina Morais"

[node name="Idade" type="RichTextLabel" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
modulate = Color( 0.156863, 0.137255, 0.239216, 1 )
margin_left = -593.034
margin_top = -424.102
margin_right = -442.034
margin_bottom = -409.102
rect_scale = Vector2( 8.03703, 6.70873 )
text = "Idade: 19"

[node name="Antigenos" type="RichTextLabel" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
modulate = Color( 0.156863, 0.137255, 0.239216, 1 )
margin_left = -599.385
margin_top = -335.952
margin_right = -448.385
margin_bottom = -320.952
rect_scale = Vector2( 5.35425, 10.3222 )
text = "Antigenos: A e B"

[node name="Anticorpos" type="RichTextLabel" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
modulate = Color( 0.156863, 0.137255, 0.239216, 1 )
margin_left = -599.856
margin_top = -191.64
margin_right = -450.856
margin_bottom = -176.64
rect_scale = Vector2( 5.18438, 12.1157 )
text = "Anticorpos: Nenhum"

[node name="RH" type="RichTextLabel" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
modulate = Color( 0.156863, 0.137255, 0.239216, 1 )
margin_left = -587.495
margin_top = -20.9391
margin_right = -436.495
margin_bottom = -5.93909
rect_scale = Vector2( 5.36662, 12.8934 )
text = "RH = Positivo"

[node name="Botão jogo" type="Sprite" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
position = Vector2( -448.945, 554.357 )
scale = Vector2( 0.13464, 0.125027 )
texture = ExtResource( 4 )

[node name="Botão jogo2" type="Sprite" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
position = Vector2( 466.025, 814.73 )
scale = Vector2( 0.13464, 0.125027 )
texture = ExtResource( 4 )

[node name="Botão jogo3" type="Sprite" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
position = Vector2( 456.645, 541.629 )
scale = Vector2( 0.13464, 0.125027 )
texture = ExtResource( 4 )

[node name="Botão jogo4" type="Sprite" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
position = Vector2( 187.294, 805.573 )
scale = Vector2( 0.13464, 0.125027 )
texture = ExtResource( 4 )

[node name="Botão jogo5" type="Sprite" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
position = Vector2( 180.852, 541.629 )
scale = Vector2( 0.13464, 0.125027 )
texture = ExtResource( 4 )

[node name="Botão jogo6" type="Sprite" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
position = Vector2( -130.566, 817.783 )
scale = Vector2( 0.13464, 0.125027 )
texture = ExtResource( 4 )

[node name="Botão jogo7" type="Sprite" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
position = Vector2( -131.009, 546.843 )
scale = Vector2( 0.13464, 0.125027 )
texture = ExtResource( 4 )

[node name="Botão jogo8" type="Sprite" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
position = Vector2( -450.797, 818.676 )
scale = Vector2( 0.13464, 0.125027 )
texture = ExtResource( 4 )

[node name="Errado4" type="Button" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
margin_left = -524.398
margin_top = 469.682
margin_right = -475.398
margin_bottom = 524.682
rect_scale = Vector2( 3.31935, 3.84122 )
text = "A+"
flat = true
script = ExtResource( 5 )

[node name="Errado2" type="Button" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
margin_left = -209.162
margin_top = 460.194
margin_right = -160.162
margin_bottom = 515.194
rect_scale = Vector2( 3.31935, 3.84122 )
text = "B+"
flat = true
script = ExtResource( 5 )

[node name="Errado" type="Button" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
margin_left = -522.63
margin_top = 737.551
margin_right = -473.63
margin_bottom = 792.551
rect_scale = Vector2( 3.31935, 3.84122 )
text = "A-"
flat = true
script = ExtResource( 5 )

[node name="Errado3" type="Button" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
margin_left = -198.695
margin_top = 736.891
margin_right = -149.695
margin_bottom = 791.891
rect_scale = Vector2( 3.31935, 3.84122 )
text = "B-"
flat = true
script = ExtResource( 5 )

[node name="Correct" type="Button" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
margin_left = 108.619
margin_top = 460.524
margin_right = 157.619
margin_bottom = 515.524
rect_scale = Vector2( 3.31935, 3.84122 )
text = "AB+"
flat = true
script = ExtResource( 6 )

[node name="Errado5" type="Button" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
margin_left = 118.52
margin_top = 733.838
margin_right = 167.52
margin_bottom = 788.838
rect_scale = Vector2( 3.31935, 3.84122 )
text = "AB-"
flat = true
script = ExtResource( 5 )

[node name="Errado6" type="Button" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
margin_left = 387.645
margin_top = 462.917
margin_right = 436.645
margin_bottom = 517.917
rect_scale = Vector2( 3.31935, 3.84122 )
text = "O+"
flat = true
script = ExtResource( 5 )

[node name="Errado7" type="Button" parent="Plano de fundo, doação (F)2/Bancada2/Prancheta"]
margin_left = 396.343
margin_top = 724.022
margin_right = 445.343
margin_bottom = 779.022
rect_scale = Vector2( 3.31935, 3.84122 )
text = "O-"
flat = true
script = ExtResource( 5 )
[connection signal="pressed" from="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado4" to="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado4" method="_on_Errado4_pressed"]
[connection signal="pressed" from="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado2" to="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado2" method="_on_Errado2_pressed"]
[connection signal="pressed" from="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado" to="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado" method="_on_Errado_pressed"]
[connection signal="pressed" from="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado3" to="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado3" method="_on_Errado3_pressed"]
[connection signal="pressed" from="Plano de fundo, doação (F)2/Bancada2/Prancheta/Correct" to="Plano de fundo, doação (F)2/Bancada2/Prancheta/Correct" method="_on_Correct_pressed"]
[connection signal="pressed" from="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado5" to="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado5" method="_on_Errado5_pressed"]
[connection signal="pressed" from="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado6" to="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado6" method="_on_Errado6_pressed"]
[connection signal="pressed" from="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado7" to="Plano de fundo, doação (F)2/Bancada2/Prancheta/Errado7" method="_on_Errado7_pressed"]
