extends Button
func _on_Errado_pressed():
	get_tree().change_scene("res://Node.tscn")
	pass
func _on_Errado2_pressed():
	get_tree().change_scene("res://Node.tscn")
	pass
func _on_Errado3_pressed():
	get_tree().change_scene("res://Node.tscn")
	pass
func _on_Errado4_pressed():
	get_tree().change_scene("res://Node.tscn")
	pass


func _on_Errado5_pressed():
	get_tree().change_scene("res://Node.tscn")
	pass # Replace with function body.


func _on_Errado6_pressed():
	get_tree().change_scene("res://Node.tscn")
	pass # Replace with function body.


func _on_Errado7_pressed():
	get_tree().change_scene("res://Node.tscn")
	pass # Replace with function body.
